--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,6 +1,7 @@
 = Home Page
 :navtitle: Home
 :title: Home
+:sectlinks:
 
 == Introduction
 Hello my name is Trelston Moraes and welcome to my personal documentation website.
@@ -11,15 +12,15 @@ At this point of time, it is still a work in progress with 5 important sections 
 
 == Project Starter Pack (WIP)
 
-I have 15 years of experience in developing and deploying small, medium and large enterprise application using the dotnet platorm. Things have changed a lot obviously since I first started. The aim of this section is for me to answer the question - "If I were to start a new project today. How will I proceed?". I would like to answer this question not only with a sample project but also a sample process from development to deployment that the team will follow. So, I would like to answer this question not just with code but also a process. For this, I am going to use the https://microsoft.github.io/code-with-engineering-playbook/[Microsoft Engineering Playbook]. While this playbook, is quite abstract, my intention is to make it more concrete with scenarios and walkthroughs. My idea is that a developer who will join the team will do these walkthroughs will understand the process, the architecture and the code of my project.
+I have 15 years of experience in developing and deploying small, medium and large enterprise applications using the dotnet platorm. The aim of this section is for me to answer the question - *"If I were to start a new project today. How will I proceed?"*. I would like to answer this question not only with a sample project but also a sample end to end process - from development to deployment - that the team will follow. For this, I am going to use the https://microsoft.github.io/code-with-engineering-playbook/[Microsoft Engineering Playbook,window=_blank]. While this playbook, is abstract and conceptual, my intention is to make it more concrete with scenarios and walkthroughs. My idea is that a new developer joining the team will execute these walkthroughs and will therefore understand the process, the architecture and the code of my project.
 
 == Architecture Starter Pack (WIP)
 
-Here i intend to go through all the architecture style documented in https://learn.microsoft.com/en-us/azure/architecture/guide/architecture-styles/[Azure Architecture Styles] and have a terraform file created for each for ease of deployment to Azure
+In this section, I intend to go through all the architecture styles documented in https://learn.microsoft.com/en-us/azure/architecture/guide/architecture-styles/[Azure Architecture Styles,window=_blank] and have a terraform file created for each architecture style for easy deployment to Azure.
 
 == Study Notes (WIP)
 
-These are all the notes I take while studying a particular topic or blog posts. I randomly study different topics at different time and I want to document what I study and also be easily searchable. Now, I normally have everything in https://obsidian.md/[Obsidian] or https://pinboard.in/[pinboard] but here I can make it more discoverable and refine my knowledge.
+In this section, you will find all the notes I take while studying a particular topic or blog posts. I randomly study different topics at different times and I want to document what I study and also make it easily searchable. Now, I normally use https://obsidian.md/[Obsidian,window=_blank] as a personal note taking application and https://pinboard.in/[pinboard,window=_blank] to bookmark all the blog posts, this is just another layer in that system.
 
 == Products
 
